@@ -1,3 +1,8 @@
+2001-12-18  Bradford Hovinen  <hovinen@ximian.com>
+
+	* gconf-property-editor.c (peditor_string_widget_changed): Use
+	actual signature for the changed signal
+
 2001-12-17  Bradford Hovinen  <hovinen@ximian.com>
 
 	* gconf-property-editor.c (peditor_color_value_changed): Use a
